fix: Make radio inputs invisible instead of removing from document flow

--- a/elyreacts/src/components/styles/FormInput.module.scss
+++ b/elyreacts/src/components/styles/FormInput.module.scss
@@ -99,7 +99,9 @@
             }
 
             & > input {
-                display: none;
+                // Hide original radio button
+                position: absolute;
+                opacity: 0;
 
                 &:checked + label {
                     font-weight: bolder;
